--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
 	"name": "react-file-viewer",
-	"version": "1.2.4-fix-photo-viewer.2",
+	"version": "1.0.0",
 	"description": "Extendable file viewer for web",
 	"main": "dist/index.js",
 	"module": "dist/index.js",
-	"engines": {
-		"node": "^14.17.6",
-		"npm": "^8.19.2"
-	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/plangrid/react-file-viewer.git"
+		"url": "git+https://github.com/mclovinx99/react-file-viewer.git"
 	},
 	"scripts": {
 		"dev": "webpack -d --watch",
@@ -21,27 +17,12 @@
 		"jest": "node_modules/.bin/jest --env=jsdom",
 		"tag-and-publish": "node ./scripts/publish.js"
 	},
-	"author": "PlanGrid <opensource@plangrid.com>",
-	"contributors": [
-		{
-			"name": "Alexei Schiopu",
-			"email": "alexxschiopu@gmail.com",
-			"url": "http://schiopu.me"
-		},
-		{
-			"name": "Aaron Norby",
-			"email": "aaron.norby@gmail.com"
-		},
-		{
-			"name": "Viktoriya Savkina",
-			"email": "viktoriya.savkina@gmail.com"
-		}
-	],
+	"author": "AR <opensource@gmail.com>",
 	"license": "MIT",
 	"bugs": {
-		"url": "https://github.com/plangrid/react-file-viewer/issues"
+		"url": "https://github.com/mclovinx99/react-file-viewer/issues"
 	},
-	"homepage": "https://github.com/plangrid/react-file-viewer#readme",
+	"homepage": "https://github.com/mclovinx99/react-file-viewer#readme",
 	"devDependencies": {
 		"autoprefixer": "^7.1.0",
 		"babel-core": "^6.24.1",
